Idk if that'll fix todo on mobile it's not a big deal anyway, but hopefully

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -344,7 +344,7 @@
     }
 
     .todo_element {
-        @apply whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm;
+        @apply whitespace-nowrap lg:whitespace-normal px-3 py-4 text-sm;
     }
 }
 
